[AMBARI-26142] JDK17 support for Ambari Co-authored-by: Mohammad Arshad <arshad@apache.org>